--- a/net/Cargo.toml
+++ b/net/Cargo.toml
@@ -17,11 +17,15 @@ defmt-error = []
 
 
 [dependencies]
-defmt = "0.2.0"
-defmt-rtt = "0.2.0"
-panic-probe = "0.1.0"
+cortex-m = { version = "0.7.3", features = ["inline-asm"] }
+cortex-m-rt = "0.7.1"
+nrf5340-net-pac = "0.11.0"
+nrf5340-net-hal = "0.15.1"
 
-cortex-m = { version = "0.7.1", features = ["inline-asm"] }
-cortex-m-rt = "0.6.13"
-nrf5340-net-pac = { path = "../../nrf5340-pac/nrf5340-net-pac"}
+shared_ram = { path = "../shared_ram" }
 
+nrf53-lib = { path = "../../nrf53-lib", default-features = false, features = ["net"] }
+
+[profile.release]
+debug = true
+lto = true
